# structure-from-sherds

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
class/: KDTree.cpp  KDTree.h  axis_estimation.cpp  axis_estimation.h  data_path.h  data_structure.cpp  data_structure.h  feature_matching.cpp  feature_matching.h  filter.cpp  filter.h  ranking_system.cpp  ranking_system.h  reconstruction.cpp  reconstruction.h  visualize.cpp  visualize.h
libflang-5.0.0-vc14_20180208/info/: about.json  files  index.json  paths.json
libflang-5.0.0-vc14_20180208/info/recipe/: bld.bat  build.sh  install_flang.bat  install_flang.sh  install_libflang.bat  install_libflang.sh  meta.yaml  meta.yaml.template
